--- a/index.html
+++ b/index.html
@@ -1,89 +1,91 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!-- the head contains information about the html, link for stylesheet, and title for the website.-->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon Social Solution Services</title>
 </head>
-
-<body>
-    <header>
-    <nav class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-        <ul>
-            <li>
-            <a href="#search-engine-optimization">Search Engine Optimization</a>
-            </li>
-            <li>
-            <a href="#online-reputation-management">Online Reputation Management</a>
-            </li>
-            <li>
-            <a href="#social-media-marketing">Social Media Marketing</a>
-            </li>
+<!--The header class makes the header have a text saying "Horiseon", it also holds the navigation class.-->
+    <header class="header">
+        <h1>Hori<text class="seo">seo</text>n</h1>
+<!--The nav class contains links that go to different parts of the website.-->
+        <nav>
+            <ul>
+                <li>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                </li>
+                <li>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
+                </li>
+                <li>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
+                </li>
             </ul>
-        </div>
-    </nav>
-    </header>
+        </nav>
 
-  <main>
-    <section>
-    <div class="hero"></div>
-    </section>
+    </header>
+<!--The body holds all the content of the page.-->
+<body>
+    <!--The hero class is the big image at the top of the body.-->
+    <section class="hero" alt="Digital Marketing Meeting"></section>
+    <!--The class "content" holds the images and paragraphs for "search-engine-optimization", "online-reputation-management", and "social-media-marketing"-->
     <section class="content">
-        <article class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <section id="search-engine-optimization" class="search-engine-optimization"> <!--Changed section from class to id then added the class to target when clicked in the nav Href section-->
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Illustration of items being organized into a cloud" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </article>
-        <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        </section>
+        <section id="online-reputation-management" class="online-reputation-management">
+            <img src="./assets/images/online-reputation-management.jpg" alt="laptop with a slide saying reputation" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </article>
-        <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </section>
+        <section id="social-media-marketing" class="social-media-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" alt="People at table with social media stickers on the table" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </article>
+        </section>
     </section>
-    <section class="benefits">
-        <div class="benefit-lead">
+    <!--This is the right section of the body content that contains the three benefits-->
+        <section class="benefits">
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="gear funnel to money symbol" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Light bulb on torso with listening waves extending outward" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="Gear with multiple money symbols around the gear"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
+        </section>
     </section>
+</body>
+<!--This is the footer section of the page-->
     <section class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h3>Made with ❤️️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </section>
-    </main>
-</body>
+
 
 </html>
